syntax = "proto3";

package inventory;

option go_package = "./pkg/pb";

service InventoryService {
  rpc GetItem(GetItemRequest) returns (GetItemResponse) {}
  rpc DecreaseItemQuantity(DecreaseItemQuantityRequest) returns (DecreaseItemQuantityResponse) {}
}


message GetItemRequest { 
  int64 id = 1; 
}

message GetItemData {
  int64 id = 1;
  string name = 2;
  int64 quantity = 3;
  double price = 4;
}

message GetItemResponse {
  int64 status = 1;
  string error = 2;
  GetItemData data = 3;
}

message DecreaseItemQuantityRequest {
  int64 id = 1;
  int64 quantity = 2;
}

message DecreaseItemQuantityResponse {
  int64 status = 1;
  string error = 2;
}